# fortiedr-log-parser

./: CHANGELOG.md  fortiedr-log-parser.cabal
src/FortiEdr/: Syslog.hs
test/: Main.hs
