cabal-version: 3.0
name: fortiedr-log-parser
version: 0.1.0.0
synopsis: Parse FortiEDR logs
bug-reports: https://github.com/layer-3-communications/fortiedr-log-parser/issues
license: BSD-3-Clause
license-file: LICENSE
author: Andrew Martin
maintainer: amartin@layer3com.com
copyright: 2021 Layer 3 Communications
category: Data
build-type: Simple
extra-source-files: CHANGELOG.md

library
  exposed-modules:
    FortiEdr.Syslog
  build-depends:
    , base >=4.14 && <4.16
    , byteslice
    , bytesmith
    , chronos >=1.1.2
    , contiguous >=0.5.1
    , ip
    , primitive >=0.7.1
  hs-source-dirs: src
  ghc-options: -Wall -O2
  default-language: Haskell2010

test-suite test
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  build-depends:
    , base
    , byteslice
    , fortiedr-log-parser
    , ip
    , chronos
    , primitive
  ghc-options: -Wall -O2
  default-language: Haskell2010
